@@ -2,7 +2,7 @@
 Contributors: woocommerce, automattic
 Tags: woocommerce, payment, payment request, credit card, automattic
 Requires at least: 5.6
-Tested up to: 5.8.2
+Tested up to: 5.9
 Requires PHP: 7.0
 Stable tag: 3.5.0
 License: GPLv2 or later
@@ -99,6 +99,7 @@ Please note that our support for the checkout block is still experimental and th
 == Changelog ==
 
 = 3.6.0 - 2022-xx-xx =
+* Update - Bump minimum required version of WooCommerce from 4.4 to 4.5.
 * Fix - UPE validation error visibility on checkout page.
 * Tweak - Load translations for js files directly from lang-pack json files.
 * Add - Add support for full transaction exports.
